Base styles nad view

--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -4,6 +4,18 @@
 
 {% block body %}
 
-<h1>Welcome API-NBP app</h1>
+<main>
+    <section class="pagedescription">
+        <div class="container col-md-12">
+            <header>
+                <h1>Welcome in API-NBP app</h1>
+                <h2>This application utilizes the NBP (National Bank of Poland) API to retrieve currency exchange rates,
+                    providing up-to-date and historical information on currency rates.</h2>
+                <h3><a href="/login/new">Fetch current exchange rates</a> or <a href="#">Make the conversion</a></h3>
+            </header>
+        </div>
+    </section>
+
+</main>
 
 {% endblock %}
