--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,6 +2,14 @@ body {
     margin-top: 3em;
 }
 
+body {
+    background-color: rgb(194, 178, 128);
+}
+
+.error {
+    color: red;
+}
+
 /* .alert {
     border: 1px solid #ccc;
     padding: 6px;
