--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -5,13 +5,14 @@
 {% block body %}
 
 <main>
-    <section class="pagedescription">
+    <section class="mt-2">
         <div class="container col-md-12">
             <header>
                 <h1>Welcome in API-NBP app</h1>
                 <h2>This application utilizes the NBP (National Bank of Poland) API to retrieve currency exchange rates,
                     providing up-to-date and historical information on currency rates.</h2>
-                <h3><a href="/login/new">Fetch current exchange rates</a> or <a href="#">Make the conversion</a></h3>
+                <h3><a href="/fetchcurrency/fetch">Fetch current exchange rates</a> or <a href="#">Make the
+                        conversion</a></h3>
             </header>
         </div>
     </section>
