--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -11,7 +11,8 @@
                 <h1>Welcome in API-NBP app</h1>
                 <h2>This application utilizes the NBP (National Bank of Poland) API to retrieve currency exchange rates,
                     providing up-to-date and historical information on currency rates.</h2>
-                <h3><a href="/fetchcurrency/fetch">Fetch current exchange rates</a> or <a href="#">Make the
+                <h3><a href="/fetchcurrencycontroller/fetch">Fetch current exchange rates</a> or <a
+                        href="/conversioncontroller/conversion">Make the
                         conversion</a></h3>
             </header>
         </div>
