--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -3,9 +3,8 @@
 {% block title %}Home{% endblock %}
 
 {% block body %}
-
 <main>
-    <section class="mt-2">
+    <section class="">
         <div class="container col-md-12">
             <header>
                 <h1>Welcome in API-NBP app</h1>
