--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -7,12 +7,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/styles.css">
-    <h4><a href="/">Back home</a></h4>
 </head>
 
 <body>
+    <nav class="navbar p-3">
+        <input class="btn btn-primary btn-lg" type="button" onclick="window.location.replace('/')" value="Home">
+    </nav>
     {% block body %}
+    {% endblock %}
 
+    {% block footer %}
     {% endblock %}
 </body>
 
