--- a/App/Views/FetchCurrency/fetch.html
+++ b/App/Views/FetchCurrency/fetch.html
@@ -11,7 +11,8 @@
 
             </header>
             <div class="row mb-5 mt-2">
-                <h2>Table C from {{ "now"|date("m/d/Y") }}</h2>
+                <h3>The C Table of buying and selling exchange rates of foreign currencies (from {{ "now"|date("m/d/Y")
+                    }})</h3>
                 <table>
                     <tr>
                         <th>Currency name</th>
