--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -10,9 +10,9 @@
                 <h1>Welcome in API-NBP app</h1>
                 <h2>This application utilizes the NBP (National Bank of Poland) API to retrieve currency exchange rates,
                     providing up-to-date and historical information on currency rates.</h2>
-                <h3><a href="/fetchcurrencycontroller/fetch">Fetch current exchange rates</a> or <a
+                <h3><a href="/fetchcurrencycontroller/fetch">Fetch current exchange rates</a>, <a
                         href="/conversioncontroller/indexConversion">Make the
-                        conversion</a></h3>
+                        conversion</a> or <a href="/conversioncontroller/show">Show last convertions.</a></h3>
             </header>
         </div>
     </section>
