README.md update and correction of typos

--- a/App/Views/Conversion/show.html
+++ b/App/Views/Conversion/show.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Last convertions{% endblock %}
+{% block title %}Last conversions{% endblock %}
 
 {% block body %}
 
@@ -11,7 +11,7 @@
                 {% if last|length == 0 %}
                 <h3>I can't find anything! <a href="/">Go home.</a></h3>
                 {% else %}
-                <h2>Last 10 currencies convertions.</h2>
+                <h2>Last 10 currencies conversions.</h2>
                 <table class="table table-bordered table-sm table-hover border border-5 narrow-table">
                     <tr>
                         <th>Amount</th>
