--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -12,7 +12,7 @@
                     providing up-to-date and historical information on currency rates.</h2>
                 <h3><a href="/fetchcurrencycontroller/fetch">Fetch current exchange rates</a>, <a
                         href="/conversioncontroller/indexConversion">Make the
-                        conversion</a> or <a href="/conversioncontroller/show">Show last convertions.</a></h3>
+                        conversion</a> or <a href="/conversioncontroller/show">Show last conversions.</a></h3>
             </header>
         </div>
     </section>
