--- a/App/Views/404.html
+++ b/App/Views/404.html
@@ -3,8 +3,9 @@
 {% block title %}Page not found{% endblock %}
 
 {% block body %}
-
+<div
+    style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 50vh; text-align: center;">
     <h1>Page not found</h1>
     <p>Sorry, that page doesn't exist.</p>
-
+</div>
 {% endblock %}
