--- a/App/Views/500.html
+++ b/App/Views/500.html
@@ -3,8 +3,9 @@
 {% block title %}Error{% endblock %}
 
 {% block body %}
-
+<div
+    style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 50vh; text-align: center;">
     <h1>An error occurred</h1>
     <p>Sorry, an error has occurred.</p>
-
+</div>
 {% endblock %}
