--- a/App/Views/FetchCurrency/fetch.html
+++ b/App/Views/FetchCurrency/fetch.html
@@ -11,7 +11,7 @@
 
             </header>
             <div class="row mb-5 mt-2">
-                <h3>The C Table of buying and selling exchange rates of foreign currencies (from {{ "now"|date("m/d/Y")
+                <h3>The C Table of buying and selling exchange rates of foreign currencies (date {{ "now"|date("m/d/Y")
                     }})</h3>
                 <table class="table table-bordered table-sm table-hover border border-5 narrow-table">
                     <tr>
